--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,2 +1,13 @@
-# This is the main configuration file for the application.
-# https://www.playframework.com/documentation/latest/ConfigFile
+include "play"
+
+# oystr proxy load balancer configuration.
+oplb {
+    execution-header = "X-Oystr-Execution"
+    url = "127.0.0.1:8080"
+    # replace with "127.0.0.1:8080" when commiting to github.
+}
+
+# oxy configuration.
+oxy {
+    health-check = 60s
+}
