Changing port from 9001 to 10000.

--- a/src/main/resources/play.conf
+++ b/src/main/resources/play.conf
@@ -1,5 +1,5 @@
 play.server.http {
-  port = 9001
+  port = 10000
   idleTimeout    = "infinite"
 }
 
@@ -10,7 +10,7 @@ play.server.akka {
 play.http.parser.maxDiskBuffer = 50MB
 play.http.parser.maxMemoryBuffer = 50MB
 parsers.anyContent.maxLength = 50MB
-play.http.secret.key = "<KEY>"
+play.http.secret.key = "changeme"
 
 play.i18n {
   langs = [ "en" ]
