Minor changes (version and adding shared folder).

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,5 +1,7 @@
 include "play"
 
+shared = "/opt/oystr/service/shared"
+
 # oystr proxy load balancer configuration.
 oplb {
     execution-header = "X-Oystr-Execution"
@@ -9,5 +11,9 @@ oplb {
 
 # oxy configuration.
 oxy {
-    health-check = 60s
+    health-check {
+        delay = 15s
+        interval = 60s
+        url = "https://www.oystr.com.br"
+    }
 }
