Avoiding syntax highlight glitch.

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -10,10 +10,8 @@ oplb {
 }
 
 # oxy configuration.
-oxy {
-    health-check {
-        delay = 15s
-        interval = 60s
-        url = "https://www.oystr.com.br"
-    }
+oxy.health-check {
+    delay = 15s
+    interval = 60s
+    url = "https://www.oystr.com.br"
 }
