Auto discovering peers that are connected to our OpenVPN server and adjusting healtcheck to avoid blocking the application.

--- a/src/main/resources/play.conf
+++ b/src/main/resources/play.conf
@@ -81,7 +81,7 @@ db.default {
     jndiName = DefaultDS
     hikaricp.numThreads = 2
     hikaricp.dataSourceClassName = org.postgresql.ds.PGSimpleDataSource
-    hikaricp.dataSource.url = "jdbc:postgresql://localhost:5432/<BD>"
+    hikaricp.dataSource.url = "jdbc:postgresql://localhost:5432/discovery"
     hikaricp.dataSource.user      = "<USUARIO>"
     hikaricp.dataSource.password  = "<PASSWORD>"
     hikaricp.dataSource.databaseName = "discovery"
