--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -6,12 +6,18 @@ shared = "/opt/oystr/service/shared"
 oplb {
     execution-header = "X-Oystr-Execution"
     url = "127.0.0.1:8080"
-    # replace with "127.0.0.1:8080" when commiting to github.
+    # replace with "127.0.0.1:8080" when committing to github.
 }
 
 # oxy configuration.
+oxy.check.url = "https://www.oystr.com.br"
+
 oxy.health-check {
     delay = 15s
-    interval = 60s
-    url = "https://www.oystr.com.br"
+    interval = 45s
+}
+
+oxy.discovery {
+    delay = 0s
+    interval = 30s
 }
