Implementing auto-discovery and metrics collection.

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -2,6 +2,26 @@ include "play"
 
 shared = "/opt/oystr/service/shared"
 
+metrics {
+    # enabled = true
+    # delay = 5s
+    # interval = 10s
+
+    # An endpoint that receives an execution id as part of the url.
+    # info {
+    #     ; The url with a %s where the execution id must be placed.
+    #     url = "https://console4.oystr.com.br/api/v1/execution/%s/info"
+    #     ; Api header name and key.
+    #     api-header = "X-Oystr-Auth"
+    #     api-key = "<API KEY>"
+    # }
+
+    # GCP Service Account with Stackdriver Logging permissions.
+    # stackdriver {
+    #     key = ${shared}"/gcloud/logger-v1.json"
+    # }
+}
+
 # oystr proxy load balancer configuration.
 oplb {
     execution-header = "X-Oystr-Execution"
@@ -10,14 +30,16 @@ oplb {
 }
 
 # oxy configuration.
-oxy.check.url = "https://www.oystr.com.br"
+oxy {
+    check.url = "https://www.oystr.com.br"
 
-oxy.health-check {
-    delay = 15s
-    interval = 45s
-}
+    health-check {
+        delay = 15s
+        interval = 45s
+    }
 
-oxy.discovery {
-    delay = 0s
-    interval = 30s
+    discovery {
+        delay = 0s
+        interval = 30s
+    }
 }
