Fixing bug where peers who fail the healthcheck were not updating their status.

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -31,7 +31,8 @@ oplb {
 
 # oxy configuration.
 oxy {
-    check.url = "https://www.oystr.com.br"
+    thread-pool.size = 16
+    health-check.url = "https://www.oystr.com.br"
 
     health-check {
         delay = 15s
