Getting rid of Caffeine (in-memory cache), removing random service endpoint and adding 'role' concept to start working in clustered environments (leader election, cluster awareness and split brain resolving are yet to be done when and if needed.).

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,6 +1,7 @@
 include "play"
 
 shared = "/opt/oystr/service/shared"
+redis.url = "redis://localhost:6379/0"
 
 metrics {
     # enabled = true
@@ -31,6 +32,7 @@ oplb {
 
 # oxy configuration.
 oxy {
+    role = "leader"
     thread-pool.size = 16
     health-check.url = "https://www.oystr.com.br"
 
