Major refactoring and adding snapshots/tainting.

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -45,4 +45,9 @@ oxy {
         delay = 0s
         interval = 30s
     }
+
+    snapshot {
+        delay = 30s
+        interval = 30 minutes
+    }
 }
