Committing uncommitted changes - re: hidden peers

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -36,6 +36,9 @@ oxy {
     thread-pool.size = 16
     health-check.url = "https://www.oystr.com.br"
 
+    # hidden peers and its related IDs.
+    peers.hidden-peers = {}
+
     health-check {
         delay = 15s
         interval = 45s
